// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`issue_comment event .all-contributorsrc has 16 files: logs 1`] = `
Array [
  Object {
    "error": "AllContributorBotError",
    "id": "1",
    "isKnownError": true,
    "level": 30,
    "msg": "Your .all-contributorsrc cannot contain more than 15 files.",
    "name": "event",
  },
]
`;

exports[`issue_comment event .all-contributorsrc has 16 files: request body 1`] = `
Object {
  "body": "@jakebolam 

Your .all-contributorsrc cannot contain more than 15 files.",
}
`;

exports[`issue_comment event Fail path, Unknown error (e.g. Network is dead, service down etc, our code is bad) crashes and sends error message: logs 1`] = `
Array [
  Object {
    "event": Object {
      "id": "1",
      "name": "issue_comment",
      "payload": Object {
        "action": "created",
        "comment": Object {
          "author_association": "MEMBER",
          "body": "@all-contributors please add jakebolam for code, doc and infra",
          "created_at": "2019-01-10T08:36:52Z",
          "html_url": "https://github.com/all-contributors/all-contributors-bot/pull/1#issuecomment-453012966",
          "id": 453012966,
          "issue_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/issues/1",
          "node_id": "MDEyOklzc3VlQ29tbWVudDQ1MzAxMjk2Ng==",
          "updated_at": "2019-01-10T08:36:52Z",
          "url": "https://api.github.com/repos/all-contributors/all-contributors-bot/issues/comments/453012966",
          "user": Object {
            "avatar_url": "https://avatars2.githubusercontent.com/u/3534236?v=4",
            "events_url": "https://api.github.com/users/jakebolam/events{/privacy}",
            "followers_url": "https://api.github.com/users/jakebolam/followers",
            "following_url": "https://api.github.com/users/jakebolam/following{/other_user}",
            "gists_url": "https://api.github.com/users/jakebolam/gists{/gist_id}",
            "gravatar_id": "",
            "html_url": "https://github.com/jakebolam",
            "id": 3534236,
            "login": "jakebolam",
            "node_id": "MDQ6VXNlcjM1MzQyMzY=",
            "organizations_url": "https://api.github.com/users/jakebolam/orgs",
            "received_events_url": "https://api.github.com/users/jakebolam/received_events",
            "repos_url": "https://api.github.com/users/jakebolam/repos",
            "site_admin": false,
            "starred_url": "https://api.github.com/users/jakebolam/starred{/owner}{/repo}",
            "subscriptions_url": "https://api.github.com/users/jakebolam/subscriptions",
            "type": "User",
            "url": "https://api.github.com/users/jakebolam",
          },
        },
        "installation": Object {
          "id": 11111,
          "node_id": "MDIzOkludGVncmF0aW9uSW5zdGFsbGF0aW9uNTYyOTc1",
        },
        "issue": Object {
          "assignee": null,
          "assignees": Array [],
          "author_association": "MEMBER",
          "body": "",
          "closed_at": null,
          "comments": 60,
          "comments_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/issues/1/comments",
          "created_at": "2019-01-07T13:12:39Z",
          "events_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/issues/1/events",
          "html_url": "https://github.com/all-contributors/all-contributors-bot/pull/1",
          "id": 396481824,
          "labels": Array [],
          "labels_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/issues/1/labels{/name}",
          "locked": false,
          "milestone": null,
          "node_id": "MDExOlB1bGxSZXF1ZXN0MjQyNjU0MDM0",
          "number": 1,
          "pull_request": Object {
            "diff_url": "https://github.com/all-contributors/all-contributors-bot/pull/1.diff",
            "html_url": "https://github.com/all-contributors/all-contributors-bot/pull/1",
            "patch_url": "https://github.com/all-contributors/all-contributors-bot/pull/1.patch",
            "url": "https://api.github.com/repos/all-contributors/all-contributors-bot/pulls/1",
          },
          "repository_url": "https://api.github.com/repos/all-contributors/all-contributors-bot",
          "state": "open",
          "title": "(wip) test: test pr for the bot",
          "updated_at": "2019-01-10T08:36:52Z",
          "url": "https://api.github.com/repos/all-contributors/all-contributors-bot/issues/1",
          "user": Object {
            "avatar_url": "https://avatars2.githubusercontent.com/u/3534236?v=4",
            "events_url": "https://api.github.com/users/jakebolam/events{/privacy}",
            "followers_url": "https://api.github.com/users/jakebolam/followers",
            "following_url": "https://api.github.com/users/jakebolam/following{/other_user}",
            "gists_url": "https://api.github.com/users/jakebolam/gists{/gist_id}",
            "gravatar_id": "",
            "html_url": "https://github.com/jakebolam",
            "id": 3534236,
            "login": "jakebolam",
            "node_id": "MDQ6VXNlcjM1MzQyMzY=",
            "organizations_url": "https://api.github.com/users/jakebolam/orgs",
            "received_events_url": "https://api.github.com/users/jakebolam/received_events",
            "repos_url": "https://api.github.com/users/jakebolam/repos",
            "site_admin": false,
            "starred_url": "https://api.github.com/users/jakebolam/starred{/owner}{/repo}",
            "subscriptions_url": "https://api.github.com/users/jakebolam/subscriptions",
            "type": "User",
            "url": "https://api.github.com/users/jakebolam",
          },
        },
        "organization": Object {
          "avatar_url": "https://avatars1.githubusercontent.com/u/46410174?v=4",
          "description": "✨ Recognize all contributors, not just the ones who push code ✨",
          "events_url": "https://api.github.com/orgs/all-contributors/events",
          "hooks_url": "https://api.github.com/orgs/all-contributors/hooks",
          "id": 46410174,
          "issues_url": "https://api.github.com/orgs/all-contributors/issues",
          "login": "all-contributors",
          "members_url": "https://api.github.com/orgs/all-contributors/members{/member}",
          "node_id": "MDEyOk9yZ2FuaXphdGlvbjQ2NDEwMTc0",
          "public_members_url": "https://api.github.com/orgs/all-contributors/public_members{/member}",
          "repos_url": "https://api.github.com/orgs/all-contributors/repos",
          "url": "https://api.github.com/orgs/all-contributors",
        },
        "repository": Object {
          "archive_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/{archive_format}{/ref}",
          "archived": false,
          "assignees_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/assignees{/user}",
          "blobs_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/git/blobs{/sha}",
          "branches_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/branches{/branch}",
          "clone_url": "https://github.com/all-contributors/all-contributors-bot.git",
          "collaborators_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/collaborators{/collaborator}",
          "comments_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/comments{/number}",
          "commits_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/commits{/sha}",
          "compare_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/compare/{base}...{head}",
          "contents_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/contents/{+path}",
          "contributors_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/contributors",
          "created_at": "2019-01-06T02:33:42Z",
          "default_branch": "master",
          "deployments_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/deployments",
          "description": "A GitHub bot for automatically adding all-contributors",
          "downloads_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/downloads",
          "events_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/events",
          "fork": false,
          "forks": 0,
          "forks_count": 0,
          "forks_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/forks",
          "full_name": "all-contributors/all-contributors-bot",
          "git_commits_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/git/commits{/sha}",
          "git_refs_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/git/refs{/sha}",
          "git_tags_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/git/tags{/sha}",
          "git_url": "git://github.com/all-contributors/all-contributors-bot.git",
          "has_downloads": true,
          "has_issues": true,
          "has_pages": false,
          "has_projects": true,
          "has_wiki": false,
          "homepage": "",
          "hooks_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/hooks",
          "html_url": "https://github.com/all-contributors/all-contributors-bot",
          "id": 164268911,
          "issue_comment_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/issues/comments{/number}",
          "issue_events_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/issues/events{/number}",
          "issues_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/issues{/number}",
          "keys_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/keys{/key_id}",
          "labels_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/labels{/name}",
          "language": "JavaScript",
          "languages_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/languages",
          "license": Object {
            "key": "mit",
            "name": "MIT License",
            "node_id": "MDc6TGljZW5zZTEz",
            "spdx_id": "MIT",
            "url": "https://api.github.com/licenses/mit",
          },
          "merges_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/merges",
          "milestones_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/milestones{/number}",
          "mirror_url": null,
          "name": "all-contributors-bot",
          "node_id": "MDEwOlJlcG9zaXRvcnkxNjQyNjg5MTE=",
          "notifications_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/notifications{?since,all,participating}",
          "open_issues": 4,
          "open_issues_count": 4,
          "owner": Object {
            "avatar_url": "https://avatars1.githubusercontent.com/u/46410174?v=4",
            "events_url": "https://api.github.com/users/all-contributors/events{/privacy}",
            "followers_url": "https://api.github.com/users/all-contributors/followers",
            "following_url": "https://api.github.com/users/all-contributors/following{/other_user}",
            "gists_url": "https://api.github.com/users/all-contributors/gists{/gist_id}",
            "gravatar_id": "",
            "html_url": "https://github.com/all-contributors",
            "id": 46410174,
            "login": "all-contributors",
            "node_id": "MDEyOk9yZ2FuaXphdGlvbjQ2NDEwMTc0",
            "organizations_url": "https://api.github.com/users/all-contributors/orgs",
            "received_events_url": "https://api.github.com/users/all-contributors/received_events",
            "repos_url": "https://api.github.com/users/all-contributors/repos",
            "site_admin": false,
            "starred_url": "https://api.github.com/users/all-contributors/starred{/owner}{/repo}",
            "subscriptions_url": "https://api.github.com/users/all-contributors/subscriptions",
            "type": "Organization",
            "url": "https://api.github.com/users/all-contributors",
          },
          "private": false,
          "pulls_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/pulls{/number}",
          "pushed_at": "2019-01-10T07:07:47Z",
          "releases_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/releases{/id}",
          "size": 292,
          "ssh_url": "git@github.com:all-contributors/all-contributors-bot.git",
          "stargazers_count": 1,
          "stargazers_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/stargazers",
          "statuses_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/statuses/{sha}",
          "subscribers_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/subscribers",
          "subscription_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/subscription",
          "svn_url": "https://github.com/all-contributors/all-contributors-bot",
          "tags_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/tags",
          "teams_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/teams",
          "trees_url": "https://api.github.com/repos/all-contributors/all-contributors-bot/git/trees{/sha}",
          "updated_at": "2019-01-10T07:07:49Z",
          "url": "https://api.github.com/repos/all-contributors/all-contributors-bot",
          "watchers": 1,
          "watchers_count": 1,
        },
        "sender": Object {
          "avatar_url": "https://avatars2.githubusercontent.com/u/3534236?v=4",
          "events_url": "https://api.github.com/users/jakebolam/events{/privacy}",
          "followers_url": "https://api.github.com/users/jakebolam/followers",
          "following_url": "https://api.github.com/users/jakebolam/following{/other_user}",
          "gists_url": "https://api.github.com/users/jakebolam/gists{/gist_id}",
          "gravatar_id": "",
          "html_url": "https://github.com/jakebolam",
          "id": 3534236,
          "login": "jakebolam",
          "node_id": "MDQ6VXNlcjM1MzQyMzY=",
          "organizations_url": "https://api.github.com/users/jakebolam/orgs",
          "received_events_url": "https://api.github.com/users/jakebolam/received_events",
          "repos_url": "https://api.github.com/users/jakebolam/repos",
          "site_admin": false,
          "starred_url": "https://api.github.com/users/jakebolam/starred{/owner}{/repo}",
          "subscriptions_url": "https://api.github.com/users/jakebolam/subscriptions",
          "type": "User",
          "url": "https://api.github.com/users/jakebolam",
        },
      },
    },
    "headers": Object {},
    "id": "1",
    "level": 50,
    "msg": "",
    "name": "HttpError",
    "request": Object {
      "headers": Object {
        "accept": "application/vnd.github.v3+json",
        "authorization": "token [REDACTED]",
      },
      "method": "GET",
      "request": Object {},
      "url": "https://api.github.com/repos/all-contributors/all-contributors-bot/contents/.all-contributorsrc?ref=master",
    },
    "status": 500,
    "type": "Error",
  },
]
`;

exports[`issue_comment event Fail path, Unknown error (e.g. Network is dead, service down etc, our code is bad) crashes and sends error message: request body 1`] = `
Object {
  "body": "@jakebolam 

We had trouble processing your request. Please try again later.",
}
`;

exports[`issue_comment event Fail path, Unknown user intention: logs 1`] = `
Array [
  Object {
    "account": 46410174,
    "accountLogin": "all-contributors",
    "accountType": "organization",
    "action": false,
    "createdBy": 3534236,
    "createdByLogin": "jakebolam",
    "createdByType": "user",
    "id": "1",
    "level": 30,
    "msg": "Unknown action \\"false\\"",
    "name": "event",
    "private": false,
    "repository": 164268911,
    "success": false,
  },
]
`;

exports[`issue_comment event Fail path, Unknown user intention: request body 1`] = `
Object {
  "body": "@jakebolam 

I could not determine your intention.

Basic usage: @all-contributors please add @someone for code, doc and infra

For other usages see the [documentation](https://allcontributors.org/docs/en/bot/usage)",
}
`;

exports[`issue_comment event Fail path, no readme file (configuration error): logs 1`] = `
Array [
  Object {
    "error": "ResourceNotFoundError",
    "id": "1",
    "isKnownError": true,
    "level": 30,
    "msg": "File README.md was not found in the repository (all-contributors/all-contributors-bot).",
    "name": "event",
  },
]
`;

exports[`issue_comment event Fail path, no readme file (configuration error): request body 1`] = `
Object {
  "body": "@jakebolam 

File README.md was not found in the repository (all-contributors/all-contributors-bot).",
}
`;

exports[`issue_comment event Fail path, no such user: logs 1`] = `
Array [
  Object {
    "error": "UserNotFoundError",
    "id": "1",
    "isKnownError": true,
    "level": 30,
    "msg": "Could not find the user \`jakebolam\` on github.",
    "name": "event",
  },
]
`;

exports[`issue_comment event Fail path, no such user: request body 1`] = `
Object {
  "body": "@jakebolam 

Could not find the user \`jakebolam\` on github.",
}
`;

exports[`issue_comment event Happy path, add correct new contributor, but branch exists and PR is open: request body 1`] = `
Object {
  "body": "@jakebolam 

We had trouble processing your request. Please try again later.",
}
`;

exports[`issue_comment event Happy path, add correct new contributor, but branch exists: request body 1`] = `
Object {
  "body": "@jakebolam 

We had trouble processing your request. Please try again later.",
}
`;

exports[`issue_comment event Happy path, add correct new contributor, no allcontributors file (repo needs init first): request body 1`] = `
Object {
  "ref": "refs/heads/all-contributors/add-jakebolam",
  "sha": "aa218f56b14c9653891f9e74264a383fa43fefbd",
}
`;

exports[`issue_comment event Happy path, add correct new contributor, no allcontributors file (repo needs init first): request body 2`] = `
Object {
  "body": "@jakebolam 

We had trouble processing your request. Please try again later.",
}
`;

exports[`issue_comment event Happy path, add correct new contributor: request body 1`] = `
Object {
  "ref": "refs/heads/all-contributors/add-jakebolam",
  "sha": "aa218f56b14c9653891f9e74264a383fa43fefbd",
}
`;

exports[`issue_comment event Happy path, add correct new contributor: request body 2`] = `
Object {
  "body": "@jakebolam 

We had trouble processing your request. Please try again later.",
}
`;

exports[`issue_comment event Unknown contribution: logs 1`] = `
Array [
  Object {
    "account": 46410174,
    "accountLogin": "all-contributors",
    "accountType": "organization",
    "action": "add",
    "contributions": Array [],
    "createdBy": 3534236,
    "createdByLogin": "jakebolam",
    "createdByType": "user",
    "id": "1",
    "level": 30,
    "msg": "No contributions",
    "name": "event",
    "private": false,
    "repository": 164268911,
    "success": false,
    "who": "jakebolam",
  },
]
`;

exports[`issue_comment event Unknown contribution: request body 1`] = `
Object {
  "body": "@jakebolam 

I couldn't determine any contributions to add, did you specify any contributions?
          Please make sure to use [valid contribution names](https://allcontributors.org/docs/en/emoji-key).",
}
`;

exports[`issue_comment event User has no name and blog: request body 1`] = `
Object {
  "ref": "refs/heads/all-contributors/add-jakebolam",
  "sha": "aa218f56b14c9653891f9e74264a383fa43fefbd",
}
`;

exports[`issue_comment event User has no name and blog: request body 2`] = `
Object {
  "body": "@jakebolam 

We had trouble processing your request. Please try again later.",
}
`;

exports[`issue_comment event invalid .all-contributorsrc: logs 1`] = `
Array [
  Object {
    "error": "AllContributorBotError",
    "id": "1",
    "isKnownError": true,
    "level": 30,
    "msg": "This project's configuration file has malformed JSON: .all-contributorsrc. Error:: Unexpected token o in JSON at position 1",
    "name": "event",
  },
]
`;

exports[`issue_comment event invalid .all-contributorsrc: request body 1`] = `
Object {
  "body": "@jakebolam 

This project's configuration file has malformed JSON: .all-contributorsrc. Error:: Unexpected token o in JSON at position 1",
}
`;

exports[`issue_comment event skipCi=false: request body 1`] = `
Object {
  "ref": "refs/heads/all-contributors/add-jakebolam",
  "sha": "aa218f56b14c9653891f9e74264a383fa43fefbd",
}
`;

exports[`issue_comment event skipCi=false: request body 2`] = `
Object {
  "body": "@jakebolam 

We had trouble processing your request. Please try again later.",
}
`;
